--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <button id="startButton" onclick="startGame()">Click me</button>
         <canvas id="canvas1"></canvas>
         
-        <img src="wizard_spriteSheet2x.png" id="enemy">
-        <img src="rats.png" id="rat">
+        <img src="wizard.png" id="enemy">
+        <img src="rats_spriteSheet.png" id="rats">
         <!-- <img src="player_spriteSheet.png" id="player"> -->
-        <script src="mains.js"></script>
+        <script src="main.js"></script>
     </body>
     
 </html>
