--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Pixel Dungeoun Wars</title>
+        <title>Pixel Dungeon Wars</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         
         <canvas id="canvas1"></canvas>
-        <img src="wizard_spriteSheet2x.png" id="enemy">
-        <img src="rats_spriteSheet3.png" id="rats">
-        <img src="spikes.png" id="spikes">
-        <!-- <img src="player_spriteSheet.png" id="player"> -->
+        <img src="assets/wizard_spriteSheet2x.png" id="enemy">
+        <img src="assets/rats_spriteSheet3.png" id="rats">
+        <img src="assets/spikes.png" id="spikes">
+        <img src="assets/enemyHeart.png" id="eHeart">
+        <img src="assets/playerHeart.png" id="pHeart">
+        <img src="assets/ammo.png" id="ammo">
+        <img src="assets/player_spriteSheet.png" id="player">
         <div id="mainMenu">
             <div class="menuButton" id="button1" onclick="howToPlay()"><p>Nasıl Oynanır?</p></div>
             <div class="menuButton" id="button2" onclick="startGame()"><p>Oyunu Başlat</p></div>
